<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sakura"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="190dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Login_image"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:srcCompat="@drawable/ic_perm_identity_black_24dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login_hint"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/login_userame"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.182" />

            <EditText
                android:id="@+id/login_userame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/Login_username"
                android:inputType="textPersonName"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toTopOf="@+id/login_password"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Login_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/login_confirm"
                app:layout_constraintEnd_toEndOf="@+id/login_userame"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/login_userame"
                app:layout_constraintTop_toBottomOf="@+id/login_userame"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/login_confirm"
                android:layout_width="224dp"
                android:layout_height="43dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/Login_hint"
                android:textColor="@color/cardview_light_background"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/login_signup"
                app:layout_constraintEnd_toEndOf="@+id/login_password"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/login_password"
                app:layout_constraintTop_toBottomOf="@+id/login_password"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/login_signup"
                android:layout_width="224dp"
                android:layout_height="43dp"
                android:background="@color/ic_jun_background"
                android:text="@string/Signup"
                android:textColor="@color/cardview_light_background"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline13"
                app:layout_constraintEnd_toEndOf="@+id/login_confirm"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/login_confirm"
                app:layout_constraintTop_toBottomOf="@+id/login_confirm"
                app:layout_constraintVertical_bias="0.163" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>