<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sakura">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/Signup"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline14"
                app:layout_constraintVertical_bias="0.148" />

            <EditText
                android:id="@+id/signup_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/guideline15"
                app:layout_constraintEnd_toEndOf="@+id/signup_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/signup_password"
                app:layout_constraintTop_toBottomOf="@+id/signup_password" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Login_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/signup_confirm"
                app:layout_constraintEnd_toEndOf="@+id/signup_username"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/signup_username"
                app:layout_constraintTop_toBottomOf="@+id/signup_username" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Login_username"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/signup_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:id="@+id/signupbutton"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:background="@color/colorPrimary"
                android:text="@string/Signup"
                android:textColor="@color/cardview_light_background"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/signup_confirm"
                app:layout_constraintStart_toStartOf="@+id/signup_confirm"
                app:layout_constraintTop_toTopOf="@+id/guideline15" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>